# forgeStat

./: .env.example.forgestat  .gitignore  CHANGELOG.md  Cargo.toml  HANDOVER_STARS_VELOCITY.md  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ai-context.md  current-handover-prompt.md  index.md  testing-progress.md  update-handover-prompt.md
docs/ai-workflow/: ai-development.md  model-choise.md
docs/ai-workflow/archive/: archive-index.md  prd-v1.0.txt  prd-v3.0-detailed.txt  prd-v3.0.txt  tasks-phase2.json  tasks-v1.0.json  tasks-v3.0.json
docs/promo/: dev-to-submission.md
docs/technical/: animation-system.md  braille-sparklines.md  cache-history.md  cache-layer.md  ci-status-metrics.md  cli-integration.md  cli-json-output.md  cli-summary-output.md  command-palette.md  community-health-integration.md  community-health-metrics.md  compare-mode.md  config-management.md  contextual-action-hints.md  contributor-metrics.md  copy-to-clipboard.md  data-models.md  diff-mode.md  fuzzy-finder.md  github-api-client.md  health-score.md  issues-metrics.md  layout-system.md  loading-screen.md  markdown-report-export.md  mini-map.md  mouse-resizable-panels.md  panel-search-filter.md  panel-timeframe-controls.md  pr-metrics.md  release-metrics.md  security-alerts-metrics.md  snapshot-orchestrator.md  star-history.md  star-milestone-prediction.md  status-bar.md  theme-system.md  tui-event-handling.md  tui-module-architecture.md  tui-panels.md  (+3 more)
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
src/cli/: mod.rs  report.rs  summary.rs
src/core/: cache.rs  config.rs  github_client.rs  health.rs  mod.rs  models.rs  snapshot.rs  theme.rs
src/core/metrics/: ci.rs  community.rs  contributors.rs  issues.rs  mod.rs  prs.rs  releases.rs  security.rs  stars.rs  velocity.rs
src/tui/app/: command_palette.rs  compare.rs  diff.rs  event_loop.rs  fuzzy_finder.rs  help.rs  loading_screen.rs  mini_map.rs  mod.rs  mouse.rs  panels.rs  token_input.rs  utils.rs  watchlist.rs  zoom.rs
src/tui/widgets/: braille_sparkline.rs  mod.rs  spinner.rs
wix/: main.wxs
