[package]
name = "forgeStat"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A real-time GitHub repository dashboard for your terminal"
license = "MIT"
repository = "https://github.com/olaproeis/forgeStat"
homepage = "https://github.com/olaproeis/forgeStat"
keywords = ["github", "cli", "dashboard", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.74"

[[bin]]
name = "forgeStat"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "3F5B3C7B-4E8E-4E6E-9F3D-7C8A9B2D4E5F"
path-guid = "B8C0D4E5-F6A8-8901-2345-678901BCDEF0"
license = false
eula = false

[dependencies]
ratatui = "0.30"
octocrab = "0.43"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
dotenvy = "0.15.7"
uuid = { version = "1", features = ["v4", "serde"] }
arboard = "3"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
